<resources>

    <!--String para nome do app -->
    <string name="app_name">Notepad</string>

    <!-- Strings para ações de menu (Drawer) -->
    <string name="drawer_creation">Creation</string>
    <string name="drawer_main">Notepad</string>
    <string name="drawer_settings">Settings</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_lists">Lists</string>
    <string name="nav_settings">Preferences</string>
    <string name="nav_exit">Exit</string>

    <!-- Strings para ações de menu (Toolbar) -->
    <string name="action_write">Write Note</string>
    <string name="action_newList">Write List</string>
    <string name="action_exit">Exit App</string>
    <string name="action_save">Save Note</string>
    <string name="action_share">Share Note</string>
    <string name="action_share_list">Share List</string>
    <string name="action_delete">Delete Note</string>
    <string name="action_back">Cancel</string>
    <string name="action_settings">Settings</string>

    <!-- Definindo texto alternativo para drawer -->
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <!-- Strings para definição de abas -->
    <string name="tab_notes">Notes</string>
    <string name="tab_lists">Todo Lists</string>

    <!-- Strings para títulos de activities -->
    <string name="activity_create_note">New Note</string>
    <string name="activity_update_note">Save Note</string>
    <string name="activity_create_list">New List</string>
    <string name="activity_update_list">Save List</string>

    <!-- Strings para activity de notas -->
    <string name="edit_title_hint">Title</string>
    <string name="edit_content_hint">Content</string>

    <!-- Strings para botões -->
    <string name="button_change_language">Change Language</string>
    <string name="button_change_theme">Change Theme</string>
    <string name="btn_addTask">Add Task</string>
    <string name="btn_save">Save</string>


    <!-- Strings para TextViews -->
    <string name="label_language">Language Settings</string>
    <string name="label_theme">Theme Settings</string>
    <string name="label_created">Created at</string>
    <string name="label_task">Insert your task:</string>
    <string name="label_todo">To Do</string>
    <string name="label_done">Done</string>

    <!-- Strings para mensagens de alerta e sucesso -->
    <string name="alert_task_added">Task Added</string>
    <string name="alert_task_deleted">Task Deleted</string>
    <string name="alert_same_task">This task already exists!</string>
    <string name="alert_config_changed">Settings Updated!</string>
    <string name="alert_theme_change_sucess">Theme Successfully changed!</string>
    <string name="alert_create_note_sucess">Note successfully created!</string>
    <string name="alert_save_note_sucess">Note successfully updated!</string>
    <string name="alert_delete_note_sucess">Note successfully deleted!</string>
    <string name="alert_delete_list_sucess">List successfully deleted!</string>
    <string name="alert_failure">Ops, an error occurred! Try again!</string>
    <string name="alert_inexistent_note">You cannot delete a note that doesn\'t exists!</string>
    <string name="alert_empty_fields">Empty Fields!</string>
    <string name="alert_empty_shared_field">You have nothing to share!</string>
    <string name="alert_language_same">You are alreay using this language!</string>
    <string name="alert_unselected_language">Please Select a Language!</string>
    <string name="alert_settings_changed">Preferences Successfully Updated!</string>

    <!-- Strings para uso nas dialogs -->
    <string name="dialog_note_delete_title">Delete Confirmation</string>
    <string name="dialog_note_delete_content">Are you sure you want to delete this note?</string>
    <string name="dialog_list_delete_title">Delete Confirmation</string>
    <string name="dialog_list_delete_content">Are you sure you want to delete this list?</string>
    <string name="dialog_list_create_title">List Title</string>
    <string name="dialog_list_create_content">Insert a title for your list:</string>
    <string name="dialog_confirm">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>

    <!-- Strings para definição de idiomas -->
    <string name="language_pt">Portuguese</string>
    <string name="language_en">English</string>
    <string name="language_es">Spanish</string>

    <!-- Strings para definição de temas -->
    <string name="theme_dark">Dark Theme</string>
    <string name="theme_light">Light Theme</string>
    <string name="theme_blue">Neo Theme</string>
    <string name="theme_red">Wooden Theme</string>

    <!-- String padrão de novo fragmento -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_desc">Image</string>

</resources>
