<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.NoteActivity">

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_back"
        android:title="@string/action_back"
        android:orderInCategory="300"
        app:showAsAction="never"/>

</menu>