<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context=".ui.fragments.ThemeFragment">

    <ScrollView
        android:id="@+id/themeScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/listMargin"
            android:layout_marginEnd="@dimen/listMargin"
            android:layout_gravity="center">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textThemeLabel"
                android:textColor="?android:textColor"
                android:textSize="@dimen/note_text_size"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/label_theme"/>
            
            <RadioGroup
                android:id="@+id/themeRadioGroup"
                android:background="@drawable/radio_group_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textThemeLabel"
                android:padding="10dp"
                android:layout_margin="@dimen/listMargin">
                
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/darkRadioBtn"
                    android:textColor="?android:textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/theme_dark"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/lightRadioBtn"
                    android:textColor="?android:textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/theme_light"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/blueRadioBtn"
                    android:textColor="?android:textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/theme_blue"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/redRadioBtn"
                    android:textColor="?android:textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/theme_red"/>

            </RadioGroup>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnChangeTheme"
                android:background="@drawable/button_background"
                android:layout_below="@id/themeRadioGroup"
                android:layout_marginTop="15dp"
                android:layout_marginStart="@dimen/listMargin"
                android:layout_marginEnd="@dimen/listMargin"
                android:text="@string/button_change_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </ScrollView>


</FrameLayout>
